--- a/Weitianshi/pages/discoverProject/discoverProject.wxss
+++ b/Weitianshi/pages/discoverProject/discoverProject.wxss
@@ -234,13 +234,13 @@
 .jumpBox {
   background: #fff;
   width: 100%;
-  height: 140rpx;
-  padding: 44rpx 0 40rpx 0;
 }
 
 .jumpTo {
   width: 25%;
   text-align: center;
+  padding: 44rpx 0 40rpx 0;
+  height: 140rpx;
 }
 
 .jumpImage {
@@ -268,6 +268,7 @@
   padding: 32rpx 0;
   justify-content: center;
   align-items: center;
+  font-weight: bold;
 }
 
 /*精选内容  */
@@ -389,18 +390,21 @@
   font-size: 24rpx;
   color: #333;
   text-align: left;
+  line-height: 34rpx;
+  margin-bottom: 2rpx;
 }
 
 .userCompany {
   font-size: 20rpx;
   color: #999;
   text-align: left;
+  line-height: 28rpx;
 }
 
 .userLine {
   background: #f0f0f0;
   width: 686rpx;
-  height: 2rpx;
+  height: 1rpx;
 }
 
 .personNumPic {
@@ -440,9 +444,12 @@
   border-radius: 4rpx;
   width: 132rpx;
   height: 52rpx;
+  color: #3378e0;
 }
 
 .t-accreditation {
   background: #fff;
+  font-size: 28rpx;
+  color: #666;
   border-top: 0.5rpx solid #f0f0f0;
 }
