--- a/Weitianshi/pages/myProject/publishProject/publishProject.wxss
+++ b/Weitianshi/pages/myProject/publishProject/publishProject.wxss
@@ -65,15 +65,19 @@ page {
   width: 90%;
   color: #ccc;
 }
-.userBox .checkOn{
-  color:#333;
+
+.userBox .checkOn {
+  color: #333;
 }
+
 picker .checkOn {
   color: #333;
 }
-.noCheck{
-  color:#ccc;
+
+.noCheck {
+  color: #ccc;
 }
+
 .slect image {
   height: 12rpx;
   width: 24rpx;
@@ -125,10 +129,10 @@ picker .checkOn {
   background: #293b55;
   opacity: 0.9;
   width: 87%;
-  height: 80rpx;
+  height: 104rpx;
   font-size: 28rpx;
   color: #fff;
-  line-height: 80rpx;
+  line-height: 104rpx;
   padding: 0 48rpx;
 }
 
@@ -160,13 +164,14 @@ picker .checkOn {
 .projectBoxContent {
   justify-content: space-between;
   margin: 0 32rpx;
-  border-bottom: 1rpx solid #e6e6e6;
-  height: auto;
+  /* border-bottom: 1rpx solid #e6e6e6; */
+ height: 114rpx;
 }
 
 .projectTitle {
   font-size: 32rpx;
   color: #333;
+  line-height: 112rpx;
 }
 
 .projectContent {
@@ -178,6 +183,7 @@ picker .checkOn {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  line-height: 112rpx;
 }
 
 .arrowStyle {
@@ -210,6 +216,7 @@ picker .checkOn {
   padding: 0 32rpx;
   justify-content: space-between;
   background: white;
+  font-size: 32rpx;
 }
 
 .content {
@@ -226,7 +233,7 @@ picker .checkOn {
 
 .question {
   font-size: 28rpx;
-  color: #fc703e;
+  color: #f69123;
   line-height: 28rpx;
   margin: 32rpx;
 }
@@ -364,7 +371,7 @@ picker .checkOn {
   text-align: right;
   height: 112rpx;
   line-height: 112rpx;
-  width: 556rpx;
+  width: 536rpx;
   font-size: 28rpx;
   color: #333;
   overflow: hidden;
@@ -379,7 +386,7 @@ picker .checkOn {
 
 .aLine {
   width: 686rpx;
-  height: 2rpx;
+  height: 1rpx;
   background: #f0f0f0;
   margin: 0 32rpx;
 }
@@ -416,6 +423,7 @@ input:after {
   font-size: 24rpx;
   color: #333;
 }
-.newContent{
-  width: 550rpx;
+
+.newContent {
+  width: 480rpx;
 }
