--- a/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
+++ b/Weitianshi/pages/myProject/projectDetail/projectDetail.wxss
@@ -185,7 +185,7 @@ page {
   width: 100%;
   height: auto;
   background: #fff;
-  box-shadow: 0 8rpx 8rpx 0 rgba(64, 88, 122, 0.10);
+  /* box-shadow: 0 8rpx 8rpx 0 rgba(64, 88, 122, 0.10); */
   border-radius: 8rpx;
   margin: 0 0 38rpx 0;
 }
@@ -227,7 +227,7 @@ page {
 }
 
 .allIndustry {
-  margin: 24rpx 0 24rpx 0;
+  margin: 20rpx 0 20rpx 0;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -2108,15 +2108,12 @@ page {
 }
 
 .aline {
-  margin: 0 32rpx;
-  width: 90%;
+  /* margin: 0 32rpx; */
+  width: 100%;
   height: 2rpx;
   background: #e6e6e6;
 }
 
-.t-line {
-  width: 2rpx;
-}
 
 .bottomBox {
   height: 88rpx;
